# otto

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP.md  changelog.html  contributing.html  docker-compose.yml  genindex.html  index.html  objects.inv  otto.yaml  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/workflows/: ci.yml
_modules/: index.html
_modules/docker_handler/: client.html  exceptions.html
_sources/: contributing.rst.txt  quickstart.rst.txt
api/: docker_handler.html  exceptions.html
deployment/: docker-compose-test.yml  mosquitto.conf
docs/: changelog.rst  conf.py  index.md  index.rst  plan.md  session_2025_01_23.md  session_2025_01_26.md  spelling_wordlist.txt
docs/api/: docker_handler.rst  exceptions.rst
docs/guides/: context_managers.rst  error_handling.rst
guides/: context_managers.html  error_handling.html
src/: __init__.py  cli.py  cluster.py  config.py  control_plane.py  docker_handler_server.py  dockerhandler.py  metrics.py  migration.py  models.py  node_agent.py  remote.py  remote_migration.py  transfer.py
src/common/: config.py  exceptions.py  models.py
src/docker_handler/: __init__.py  async_client.py  client.py  exceptions.py
test_scripts/: __init__.py  benchmark_large_image.py  benchmark_migration.py  main.py  test_docker_server.py  test_metrics_publisher.py  test_metrics_subscriber.py  test_migration.py  test_node.py  test_orchestrator.py  test_remote_migration.py  test_swarm_migration.py  visualize_benchmarks.py
tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py
thesis/benchmarks/: large_image_benchmark_20260123_032446.json  migration_benchmarks_20260123_020249.csv  migration_benchmarks_20260123_020249.json
thesis/plots/: summary_by_image.csv  summary_by_strategy.csv
