[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otto"
version = "0.1.0"
description = "CLI tool for monitoring and orchestrating containers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "lolosioann", email = "lolosioann@gmail.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "nox",
    "ruff",
    "bandit",
    "interrogate",
    "radon",
    "xenon",
    "import-linter",
    "sphinx",
    "sphinx-rtd-theme",
]

# ------------------------
# Ruff configuration
# ------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]
per-file-ignores = { "tests/**" = ["S101"] }

[tool.ruff.format]
quote-style = "double"

# ------------------------
# Pytest configuration
# ------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
pythonpath = ["src"]

# ------------------------
# Coverage configuration
# ------------------------
[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/__init__.py", "*/cli/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true

# ------------------------
# Bandit security scanner
# ------------------------
[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests"]

# ------------------------
# Interrogate docstring enforcement
# ------------------------
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-module = false
ignore-private = true
ignore-magic = true
fail-under = 80
exclude = ["tests", "cli"]

# ------------------------
# Radon complexity
# ------------------------
[tool.radon]
cc_min = "B"

# ------------------------
# Xenon complexity thresholds
# ------------------------
[tool.xenon]
max-absolute = "C"
max-modules = "B"
max-average = "B"

# ------------------------
# Import Linter
# ------------------------
[tool.importlinter]
root_package = "otto"
include_external_packages = false
